tests/ui-nightly/inline_assert_size_eq_failed.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui-nightly/inline_assert_size_eq_failed.rs:6:1
  |
6 | #[assert_size_eq_val(1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
  |
  = note: this error originates in the macro `static_const_assert` which comes from the expansion of the attribute macro `assert_size_eq_val` (in Nightly builds, run with -Z macro-backtrace for more info)
